--- a/style/all.css
+++ b/style/all.css
@@ -263,7 +263,7 @@ header::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #130a0170;
+  background: rgba(19, 10, 1, 0.439);
   z-index: 1;
 }
 
@@ -274,7 +274,8 @@ header::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #5f441250 30%, #a84d0350 100%);
+  background: -webkit-linear-gradient(135deg, rgba(94, 67, 17, 0.314) 30%, rgba(168, 77, 3, 0.314) 100%);
+  background: linear-gradient(135deg, rgba(94, 67, 17, 0.314) 30%, rgba(168, 77, 3, 0.314) 100%);
   opacity: .8;
   z-index: 1;
 }
