--- a/style/all.css
+++ b/style/all.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   color: #ccc;
   background: #252525;
@@ -23,6 +22,11 @@ footer {
   background: #222;
 }
 
+.title {
+  color: #967958;
+  font-size: 2.5rem;
+}
+
 .st-color {
   background: #967958;
 }
@@ -32,17 +36,23 @@ footer {
 }
 
 aside {
+  visibility: hidden;
   position: fixed;
   top: 0;
   width: 100%;
   height: 100vh;
   background: #967958;
   opacity: 0;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
   -webkit-transition: all .5s;
   transition: all .5s;
   z-index: 10000;
+}
+
+aside a {
+  color: #eee;
+  letter-spacing: .2rem;
+  -webkit-transition: all .4s;
+  transition: all .4s;
 }
 
 aside wrap {
@@ -66,6 +76,7 @@ aside wrap button {
 }
 
 .active aside {
+  visibility: initial;
   opacity: .95;
   -webkit-transform: translateY(0);
           transform: translateY(0);
@@ -132,7 +143,7 @@ aside wrap button {
   font-size: .95rem;
   -webkit-transition: .5s;
   transition: .5s;
-  color: #eee;
+  color: #bbb;
 }
 
 #navbar .nav-item.top .nav-link:hover {
@@ -150,7 +161,7 @@ aside wrap button {
   font-size: .9rem;
   -webkit-transition: .5s;
   transition: .5s;
-  color: #eee;
+  color: #bbb;
 }
 
 #navbar .nav-item.scroll .nav-link:hover {
@@ -164,7 +175,8 @@ aside wrap button {
 }
 
 #navbar .nav-link.active {
-  border-bottom: 2px solid #967958;
+  border-bottom: 3px solid #967958;
+  color: #967958 !important;
   -webkit-transition: 0s !important;
   transition: 0s !important;
 }
@@ -390,25 +402,9 @@ header p {
   }
 }
 
-#about {
-  padding-bottom: 5rem;
-}
-
 #about article {
   position: relative;
   z-index: 2;
-}
-
-#about article .display-1 {
-  position: absolute;
-  bottom: -7rem;
-  right: -7rem;
-  color: #967958;
-  font-size: 9rem;
-  font-weight: 700;
-  letter-spacing: -.3rem;
-  opacity: .04;
-  font-family: 'Trebuchet MS';
 }
 
 #photo img {
@@ -419,7 +415,7 @@ header p {
 }
 
 @media (max-width: 991px) {
-  #about img {
+  #about .about-img {
     width: 50%;
   }
 }
@@ -429,84 +425,98 @@ header p {
   color: #967958;
 }
 
-#experience {
-  position: relative;
+#skill .skill-item-1 {
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
-#experience .display-1 {
+#skill .skill-item-2 {
+  -webkit-transition: all .5s .2s;
+  transition: all .5s .2s;
+}
+
+#skill .skill-item-3 {
+  -webkit-transition: all .5s .4s;
+  transition: all .5s .4s;
+}
+
+#skill .skill-item-1,
+#skill .skill-item-2,
+#skill .skill-item-3 {
+  overflow: hidden;
+  position: relative;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  opacity: 0;
+}
+
+#skill .skill-item-1::after,
+#skill .skill-item-2::after,
+#skill .skill-item-3::after {
   position: absolute;
-  top: 28rem;
-  right: -25rem;
+  top: -5.5rem;
+  right: -1rem;
   color: #967958;
-  font-size: 10rem;
+  font-size: 12rem;
   font-weight: 700;
-  letter-spacing: -.3rem;
-  opacity: .04;
+  letter-spacing: -1rem;
+  opacity: .07;
   font-family: 'Trebuchet MS';
+}
+
+#skill .skill-item-1::after {
+  content: '75';
+}
+
+#skill .skill-item-2::after {
+  content: '60';
+}
+
+#skill .skill-item-3::after {
+  content: '90';
+}
+
+#skill .show.skill-item-1, #skill .show.skill-item-2, #skill .show.skill-item-3 {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
+@media (max-width: 767px) {
+  #skill img {
+    width: 30%;
+  }
+}
+
+@media (max-width: 414px) {
+  #skill img {
+    width: 35%;
+  }
+}
+
+#experience {
+  position: relative;
 }
 
 #experience .h1 {
   color: #967958;
 }
 
-.section-2 {
-  position: relative;
-  padding: 6rem 0 4rem;
-  background-attachment: fixed;
-  background-image: url("https://picsum.photos/g/800/2400/?image=588");
-  background-size: cover;
-}
-
-/* .box {
-    width: 100%;
-    background: #e0e0e0;
-    padding: 1rem 0;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.box-inner {
-    width: calc(100% / 4 - 1rem);
-    background: rgb(255, 255, 255);
-    box-sizing: border-box;
-    border: 1px solid #dddddd;
-    padding: 1rem 1rem 2rem;
-    border-radius: 5px;
-    box-shadow: 0px 1px 0px rgba(102, 102, 102, 0.1);
-}
-
-.box-inner2 {
-    width: calc(100% / 2 - 1rem);
-    background: rgb(255, 255, 255);
-    box-sizing: border-box;
-    border: 1px solid #dddddd;
-    padding: 1rem 1rem 2rem;
-    border-radius: 5px;
-    box-shadow: 0px 1px 0px rgba(102, 102, 102, 0.1);
-}
-
-@media (max-width: 576px) {
-    .box {
-        flex-direction: column;
-        padding: 0 1rem;
-
-    }
-
-    .box-inner {
-        height: calc(100% / 4 - 1rem);
-        width: 100%;
-    }
-
-    .box-inner2 {
-        height: calc(100% / 2 - 1rem);
-        width: 100%;
-    }
-} */
-/*  時間軸 */
 .card {
   border: none;
   background: #333;
   color: #bbb;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+}
+
+.show.card {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 
 .card-header {
@@ -606,6 +616,193 @@ header p {
     border-left: 9px solid transparent;
     border-right: 9px solid #7e6a52;
     border-bottom: 9px solid transparent;
+  }
+}
+
+#portfolio {
+  background: #292929;
+  overflow: hidden;
+}
+
+#portfolio-nav button {
+  font-size: .8rem;
+  color: #ccc;
+  background: #333;
+  border: 1px solid #303030;
+}
+
+#portfolio-nav button.active {
+  color: #252525;
+  background: #967958;
+  border: 1px solid #7e6a52;
+  cursor: initial;
+}
+
+#portfolio-nav button:hover {
+  color: #252525;
+  background: #7e6a52;
+  border: 1px solid #7e6a52;
+}
+
+#portfolio-nav button + button {
+  margin-left: .5rem;
+}
+
+.portfolio-wrapper {
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+}
+
+.show.portfolio-wrapper {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+
+.portfolio-wrap {
+  visibility: hidden;
+  max-height: 0;
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+  opacity: 0;
+  -webkit-transition: all 0s;
+  transition: all 0s;
+}
+
+.portfolio-wrap.active {
+  visibility: initial;
+  max-height: initial;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+  -webkit-transition: all .7s;
+  transition: all .7s;
+}
+
+.portfolio-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.portfolio-content .portfolio-item {
+  position: relative;
+  background-size: cover;
+  width: 31.333%;
+  height: 14rem;
+  margin: 0 1% 1rem;
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.portfolio-content .portfolio-item .portfolio-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  background: #130901b0;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  z-index: 1;
+}
+
+.portfolio-content .portfolio-item .portfolio-view p {
+  font-size: .7rem;
+  margin-bottom: .3rem;
+  letter-spacing: .2rem;
+  color: #bbb;
+}
+
+.portfolio-content .portfolio-item span {
+  position: absolute;
+  background: url("https://picsum.photos/480/600/?random") 50% 50%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-transition: all 3s;
+  transition: all 3s;
+}
+
+.portfolio-item.active .portfolio-view {
+  opacity: 1;
+}
+
+.portfolio-item.active span {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+@media (max-width: 767px) {
+  .portfolio-content {
+    padding: 0 1rem;
+  }
+  .portfolio-content .portfolio-item {
+    width: 48%;
+    margin: 0 1% .8rem;
+    height: 14rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .portfolio-content .portfolio-item {
+    width: 98%;
+    margin: 0 1% 1rem;
+    height: 16rem;
+  }
+}
+
+#contact .contact strong {
+  display: block;
+  font-size: 4rem;
+  font-family: 'Trebuchet MS';
+}
+
+#contact .contact p {
+  margin-top: 3rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+@media (max-width: 767px) {
+  #contact .contact strong {
+    font-size: 2.5rem;
+  }
+  #contact .contact p {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 575px) {
+  #contact .contact strong {
+    font-size: 1.8rem;
+  }
+  #contact .contact p {
+    font-size: 1.5rem;
   }
 }
 /*# sourceMappingURL=all.css.map */
