--- a/style/all.css
+++ b/style/all.css
@@ -1,3 +1,98 @@
+.grid::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .grid-item ---- */
+.grid-sizer {
+  width: 33.333%;
+}
+
+.grid-item {
+  position: relative;
+  overflow: hidden;
+  width: 32%;
+  margin: 0 .5% 1.5%;
+}
+
+.grid-item .grid-img {
+  display: block;
+  width: 100%;
+  -webkit-transition: all 2s;
+  transition: all 2s;
+}
+
+.grid-item.active .grid-view {
+  opacity: 1;
+}
+
+.grid-item.active .grid-img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all 3s;
+  transition: all 3s;
+}
+
+.grid-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1rem;
+  background: #130901b0;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  z-index: 2;
+}
+
+.grid-view p {
+  font-size: .7rem;
+  margin-bottom: .3rem;
+  letter-spacing: .2rem;
+  color: #bbb;
+}
+
+.grid-view .view-icon {
+  width: 40px;
+}
+
+.grid-item {
+  float: left;
+}
+
+@media (max-width: 991px) {
+  .grid-sizer {
+    width: 50%;
+  }
+  .grid-item {
+    width: 48%;
+    margin: 0 1% 2%;
+  }
+}
+
+@media (max-width: 767px) {
+  .grid-sizer {
+    width: 100%;
+  }
+  .grid-item {
+    width: 100%;
+    margin: 0 0 2%;
+  }
+}
+
 body {
   color: #ccc;
   background: #252525;
@@ -666,8 +761,8 @@ header p {
 .portfolio-wrap {
   visibility: hidden;
   max-height: 0;
-  -webkit-transform: scale(0.7);
-          transform: scale(0.7);
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
   opacity: 0;
   -webkit-transition: all 0s;
   transition: all 0s;
