--- a/style/all.scss
+++ b/style/all.scss
@@ -1,3 +1,5 @@
+@import  'masonry';
+
 $st-color: #967958;
 $nd-color: #7e6a52;
 $bg-color: #252525;
@@ -32,7 +34,7 @@ footer {
 
 .st-color {
     background: $st-color;
-}
+} 
 
 .st-text-color {
     color: $st-color;
@@ -677,7 +679,7 @@ header {
 .portfolio-wrap {
     visibility: hidden;
     max-height: 0;
-    transform: scale(.7);
+    transform: scale(.85);
     opacity: 0;
     transition: all 0s;
 
