--- a/style/venobox.css
+++ b/style/venobox.css
@@ -52,11 +52,11 @@
 .vbox-close {
     cursor: pointer;
     position: fixed;
-    top: 0;
+    top: 10px;
     right: 1rem;
     width: 50px;
-    height: 40px;
-    padding: 6px;
+    height: 50px;
+    padding: 0 0 15px;
     display: block;
     background-position: 10px center;
     overflow: hidden;
@@ -66,7 +66,7 @@
     font-weight: 300;
     opacity: .5;
     transition: opacity .5s;
-    z-index: 1050;
+    z-index: 1060;
 }
 
 .vbox-close:hover {
@@ -90,8 +90,8 @@
 @media (max-width: 767px) {
     .vbox-close {
         top: initial;
-        bottom: 1rem;
-        right: 50%;    
+        bottom: 0;
+        right: 50%;
         transform: translateX(50%);
         font-size: 2rem;
         opacity: .7;
@@ -104,12 +104,12 @@
 .vbox-prev {
     display: block;
     position: fixed;
-    top: 50%;
+    top: 0;
     margin-top: -15px;
     overflow: hidden;
     cursor: pointer;
     width: 80px;
-    height: 40px;
+    height: 100vh;
     z-index: 1050;
     opacity: .5;
     transition: opacity .5s;
@@ -126,11 +126,11 @@
     width: 13px;
     height: 13px;
     border: 2px solid transparent;
-    border-top-color: #B6B6B6;
-    border-right-color: #B6B6B6;
-    text-indent: -100px;
+    border-top-color: #fff;
+    border-right-color: #fff;
+    text-indent: -150px;
     position: absolute;
-    top: 10px;
+    top: 50%;
     display: block;
 }
 
@@ -159,8 +159,9 @@
 .vbox-prev::after {
     content: 'PREV';
     position: absolute;
-    top: .46rem;
+    top: 50%;
     left: 32px;
+    transform: translateY(-16%);
     color: #ffffff;
     font-size: .8rem;
     letter-spacing: .2rem;
@@ -170,8 +171,9 @@
 .vbox-next::after {
     content: 'NEXT';
     position: absolute;
-    top: .46rem;
+    top: 50%;
     right: 30px;
+    transform: translateY(-16%);
     color: #ffffff;
     font-size: .8rem;
     letter-spacing: .2rem;
@@ -179,11 +181,17 @@
 }
 
 @media (max-width: 767px) {
-    .vbox-next,
-    .vbox-prev {
+
+    .vbox-next span,
+    .vbox-prev span {
         top: initial;
-        bottom: .5rem;
-        opacity: .7;
+        bottom: .6rem;
+    }
+
+    .vbox-prev::after,
+    .vbox-next::after {
+        top: initial;
+        bottom: .265rem;
     }
 }
 
