--- a/style/all.css
+++ b/style/all.css
@@ -381,6 +381,7 @@ header::after {
   left: 0;
   width: 100%;
   height: 100%;
+  background: -webkit-linear-gradient(135deg, #5f441250 30%, #a84d0350 100%);
   background: linear-gradient(135deg, #5f441250 30%, #a84d0350 100%);
   opacity: .8;
   z-index: 1;
